--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -14,6 +14,9 @@
 </style>
 </head>
 <body>
+<form action="/auth?_method=DELETE" method="post">
+      <input type="submit" value="Logout">
+    </form>
 <h1>Welcome! <%= user.username %></h1>
 <form action="/users/profile" method='GET'>
   <input type='text' name='game' placeholder='search a game'>
@@ -34,6 +37,12 @@
   <%- result.results[0].description %>
 </div>
 </div>
+  <form action="/users/profile" method="POST">
+    <input type="hidden" name="favorite[gameName]" value="<%= result.results[0].name%>">
+    <input type="hidden" name="favorite[gameImage]" value="<%= result.results[0].image.small_url%>">
+    <input type="submit" value="SAVE">
+  </form>
+
 <div class="stream">
 <button class="next">next</button>
     <% if (stream.streams[0]) { %>
@@ -47,13 +56,21 @@
     </iframe>
     <% } %>
 
-
+  <div id="favorites">
+    <h2><%= user.username %>'s Favorites:</h2>
+    <% favorites.forEach((fave) => { %>
+      <div class="fave">
+        <img src="<%= fave.gameImage %>" alt="">
+        <p><%= fave.gameName %></p>
+        <form action="/users/profile/<%= fave._id %>?_method=DELETE" method="POST">
+          <input type="submit" value="Delete">
+        </form>
+      </div>
+<% }) %>
 
 
 </div>
-<form action="/auth?_method=DELETE" method="post">
-      <input type="submit" value="Logout">
-    </form>
+
 </body>
 
 <script>
