--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/login.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
-    <h1>Home</h1>
     <header>
       <nav>
-        <a href="/signup">Sign Up</a>
-        <a href="/login">Log In</a>
-        <a href="/guest">Guest?</a>
+        <ul>
+       <li> <a href="/signup">Sign Up</a></li>
+       <li><a href="/login">Log In</a></li>
+       <li> <a href="/guest">Guests</a></li>
+        </ul>
       </nav>
     </header>
   </body>
