--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Login</title>
+    <link rel="stylesheet" href="/css/login.css">
   </head>
   <body>
     <h1>Login</h1>
+   <div class="login">
     <form class="" action="/auth" method="post">
-        <input type="text" name="user[username]" value="" placeholder="Username">
-        <input type="password" name="user[password]" value="" placeholder="Password">
-        <input type="submit" name="name" value="Log in">
+        <input type="text" name="user[username]" value="" placeholder="Username"></br>
+        <input type="password" name="user[password]" value="" placeholder="Password"></br>
+        <input class='button' type="submit" name="name" value="Log in">
     </form>
+   </div>
   </body>
 </html>
